# SimpleGraphics

./: CMakeLists.txt
include/simple_graphics/: graphics.h  platform.h
src/: graphics.c  platform_win32.c
